  - Allow a 30 seconds grace period for child processes to close before asking them nicely, and than not nicely to quit
  - Fully refactored prometheus metrics parser to be able to read restic standard or json outputs
  - Reimplmented auto upgrade after CLI/GUI split
  - Added initial tests
  - Exclude lists have been updated

## 2.2.2 - 14/12/2023 (internal build only)
  - Fixed backup paths of '/' root partitions
  - Properly display repository init errors
  - Logs didn't show proper error status
  - Fixed wrong init detection for S3 backend

## 2.2.1 - 28/08/2023
  - Added snapshot deletion option in GUI
  - Fix ignore_cloud_files parameter did not work on some non systems (still an issue, see https://github.com/restic/restic/issues/4155)
  - Configured default backend connections to 2 for local, 8 for remote when default value '0' is given
  - Fine adjust GOMAXPROCS environment variable (n for 1 core, n-1 for 2-4 cores, n-2 for 5+ cores)
  - Updated internal restic binary to 0.16.0 compiled with go1.20.6
  - Compiled with newer Nuitka 1.7.10 that allows use of Python 3.11
  - Updated python to version 3.11 for Windows x64 targets
  - Basic MacOS X compile support

## 2.2.0 - rtm - 03/06/2023
  - Fix potential deadlock in evaluate variables
  - Fix additionnal parameters should only apply for backup operations
  - Fix unnecessary exclude statements when no exclusions are given
  - Added source types (--files-from, --files-from-verbatim and --files-from-raw equivalent)
  - Add encrypted environment variables support
  - Add SSL certificate verification bypass for prometheus metrics
  - Make sure all multiline entries in config files are processed as lists
  - Add exclude-patterns to GUI (was present in CLI version already)
  - Make sure we always quote exclusions patterns or files
  - Updated internal restic binary to 0.15.2 compiled with go1.20.3
  - *SECURITY* Don't log password command, even in debug mode
  - Compiled with Nuitka commercial 1.5.8
