@@ -1,4 +1,1 @@
 This directory contains various example config files.
-
-The file npbackup.conf.dist file will be bundled as default with NPBackupInstaller.
-You may copy npbackup.conf.dist to ../PRIVATE/_private.npbackup.conf.dist in order to add the later file in private build installers.
